--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
-      "use": "@now/node"
+      "src": "./index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js"
+      "dest": "/",
+      "methods": ["GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS"]
     }
   ]
 }
